maybe fix burger menu on mobile phones, take 5

--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -232,7 +232,7 @@
         left: 0;
         bottom: 0;
         height: 4px;
-        background: mix(#fff, $body-color, 50%);
+        background: mix(#000, $body-color, 50%);
         width: 100%;
         -webkit-transition: $global-transition;
         transition: $global-transition;
@@ -257,7 +257,7 @@
     padding: 5px;
     border: 1px solid $border-color;
     border-radius: $border-radius;
-    background: #fff;
+    background: $background-color;
     box-shadow: 0 0 10px rgba(#000, 0.25);
 
     a {
@@ -371,7 +371,7 @@
 
 .toc {
   font-family: $sans-serif-narrow;
-  color: $gray;
+  color: $text-color;
   text-transform: uppercase;
   letter-spacing: 1px;
   background-color: $background-color;
@@ -398,7 +398,7 @@
   a {
     display: block;
     padding: 0.5rem 1rem;
-    color: $gray;
+    color: $text-color;
     font-size: $type-size-7;
     font-weight: bold;
     line-height: 1.5;
